Added rounded btns

--- a/src/app/eva/styleguide/components/buttons-guide/buttons-guide.component.html
+++ b/src/app/eva/styleguide/components/buttons-guide/buttons-guide.component.html
@@ -107,3 +107,88 @@
     </div>
   </div>
 </div>
+
+<div class="card margin-y">
+  <div class="card-title">
+    Rounded Buttons
+  </div>
+  <div class="card-subtitle">
+    EVA buttons classes
+  </div>
+  <div class="card-content">
+    The following are the EVA buttons classes available in the project. The
+    buttons are pulled from the color palette and will create a button for each
+    color.
+
+    <pre class="show-for-medium">
+&lt;button class="eva-round-btn eva-btn-{{
+        '{' + '{ color }' + '}'
+      }}&gt;&lt;&#8725;button&gt;</pre
+    >
+
+    <div
+      class="buttons-examples-container grid-x grid-margin-x small-up-2 medium-up-5"
+    >
+      <button class="cell eva-round-btn eva-btn-primary">
+        <span>Primary button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-secondary">
+        <span>Secondary button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-tertiary">
+        <span>Tertiary button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-accent">
+        <span>Accent button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-success">
+        <span>Success button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-warning">
+        <span>Warning button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-danger">
+        <span>Danger button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-info">
+        <span>Info button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-neutral">
+        <span>Neutral button</span>
+      </button>
+      <button class="cell eva-round-btn" disabled>
+        <span>Disabled button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-outline-primary">
+        <span>Primary button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-outline-secondary">
+        <span>Secondary button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-outline-tertiary">
+        <span>Tertiary button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-outline-accent">
+        <span>Accent button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-outline-success">
+        <span>Success button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-outline-warning">
+        <span>Warning button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-outline-danger">
+        <span>Danger button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-outline-info">
+        <span>Info button</span>
+      </button>
+      <button class="cell eva-round-btn eva-btn-outline-neutral">
+        <span>Neutral button</span>
+      </button>
+      <button class="cell eva-round-btn" disabled>
+        <span>Disabled button</span>
+      </button>
+    </div>
+  </div>
+</div>
