--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -14,16 +14,16 @@ $color-map: (
   warning: #ffc107,
   danger: #d03027,
   info: #3f51b5,
-  neutral: #333333
+  neutral: #333333,
 );
 
 /* Each breakpoint is used for media queries mixins */
 $resolution-breakpoints: (
   small: 0px,
-  medium: 768px,
-  large: 992px,
+  medium: 640px,
+  large: 1024px,
   xlarge: 1200px,
-  xxlarge: 1440px
+  xxlarge: 1440px,
 );
 
 /* Each spacer is used for margin and padding spacing classes */
@@ -31,7 +31,7 @@ $spacers: (
   small: 0.25rem,
   medium: 0.5rem,
   default: 1rem,
-  large: 1.5rem
+  large: 1.5rem,
 );
 
 /* Each text weight creates a class named the same as the key */
@@ -45,5 +45,5 @@ $text-weights: (
   semi-bold: 600,
   semibold: 600,
   bold: 700,
-  extra-bold: 800
+  extra-bold: 800,
 );
